// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Basic 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper select-medium octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": 256,
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-medium input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-121"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input input-medium with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
            disabled={false}
            id="input-122"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={true}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default button-medium pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Disabled 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper select-medium select-wrapper-disabled octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": 256,
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-medium input-stretch right-icon disabled"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-123"
            aria-disabled={true}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input input-medium with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
            disabled={true}
            id="input-124"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={true}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={true}
            className="icon-button right-icon button button-default button-medium pill-shape icon-left disabled"
            defaultChecked={false}
            disabled={true}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Dynamic 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper select-medium octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": 256,
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-medium input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-125"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input input-medium with-icon-button input-stretch right-icon clear-not-visible"
            disabled={false}
            id="input-126"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={false}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default button-medium pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Dynamic Width 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper select-medium octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-medium input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-127"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input input-medium with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
            disabled={false}
            id="input-128"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={true}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default button-medium pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Filterable 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper select-medium octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": 256,
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-medium input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-129"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input input-medium with-icon-button input-stretch right-icon clear-not-visible"
            disabled={false}
            id="input-130"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={false}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default button-medium pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Multiple 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper select-medium octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-medium input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-131"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input input-medium with-icon-button input-stretch right-icon clear-not-visible"
            disabled={false}
            id="input-132"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={false}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default button-medium pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Multiple With No Filter 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper select-medium octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-medium input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-133"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input input-medium with-icon-button input-stretch right-icon clear-not-visible"
            disabled={false}
            id="input-134"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={true}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default button-medium pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Options Disabled 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper select-medium octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": 256,
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-medium input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-135"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input input-medium with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
            disabled={false}
            id="input-136"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={true}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default button-medium pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select With Clear 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper select-medium octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": 256,
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-medium input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-137"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input input-medium with-icon-button input-stretch right-icon clear-not-visible"
            disabled={false}
            id="input-138"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={true}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default button-medium pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select With Default Value 1`] = `
<div
  style={
    Object {
      "marginTop": 80,
    }
  }
>
  <div
    className="select-wrapper select-medium octuple-select-class"
    data-test-id="octuple-select-test-id"
    style={
      Object {
        "width": 256,
      }
    }
  >
    <div
      className="select-dropdown-main-wrapper main-wrapper"
    >
      <div
        className="input-wrapper input-medium input-stretch right-icon"
      >
        <div
          className="input-group right-icon"
        >
          <input
            aria-controls="dropdown-139"
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup={true}
            autoFocus={false}
            className="select-input input-medium with-icon-button input-stretch right-icon clear-disabled clear-not-visible"
            disabled={false}
            id="input-140"
            onChange={[Function]}
            onClick={[Function]}
            placeholder="Select"
            readOnly={true}
            required={false}
            role="textbox"
            tabIndex={0}
            type="text"
            value=""
          />
          <button
            aria-disabled={false}
            className="icon-button right-icon button button-default button-medium pill-shape icon-left"
            defaultChecked={false}
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={false}
              className="icon icon-wrapper"
              role="presentation"
            >
              <svg
                role="presentation"
                style={
                  Object {
                    "height": "20px",
                    "width": "20px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  style={
                    Object {
                      "fill": "currentColor",
                    }
                  }
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
